-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.0, 5.4.0 Beta
-
None
-
84a3dacf462a4170a7fbc71b012fbb2db2c34a19
to reproduce the problem, just run the itemviews/combowidget example.
then press tab. When the focus gets on the QTextEdit pressing tab just puts the cursor at position 0 but never changes focus or insert a tab.
For Gerrit Dashboard: QTBUG-3305 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
99812,6 | QItemDelegate: let QTextEdit and QPlainTextEdit receive tab keypresses | dev | qt/qtbase | Status: MERGED | +2 | 0 |